# Moxie

./: .gitignore  CMakeLists.txt  Moxie  Moxie.cbp  README.md  TODO.txt  main.cpp  moxie.kdev4
.kdev4/: moxie.kdev4
Framework/: Input.cpp  Shader.cpp
doc/: CodingStyle.md  Moxie.md
include/: Constants.h  Display.h  Display.h.orig  Generic.h  Input.h  Input.h.orig  Mesh.h  Moxie.h  Scene.h  SceneManager.h  Shader.h  Singleton.h  Utility.h
include/MoxieCore/: ChatterBox.h  Display.h  Input.h
res/shaders/: fs.glsl  vs.glsl
scripts/: TODO  modconvert.py
src/: Display.cpp  Display.cpp.orig  Generic.cpp  Input.cpp  Mesh.cpp  Mesh.cpp.orig  Scene.cpp  SceneManager.cpp  Shader.cpp  Singleton.cpp  TODO  Utility.cpp  main.cpp  main.cpp.orig
src/Framework/: Display.cpp  Input.cpp  Mesh.cpp  TODO
src/Scene/: Scene.cpp
